# FreedomBench

./: .gitignore  README.md  pyproject.toml
freedombench/: classify.py  providers.json  questions.py  report.py  run.py
freedombench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: freedombench_baselines.json  freedombench_qwen.json  freedombench_qwen25.json  freedombench_serial.json  freedombench_tail.json  freedombench_tinfoil_ab_glm-5.2.json  freedombench_v1.json
scripts/: serial_rerun.py  tinfoil_ab.py  variance_probe.py
